added more files, more recordings and more stuff.

--- a/4.html
+++ b/4.html
@@ -38,6 +38,22 @@
                     that I'll try and explain. This part of the guide assumes you've read previous parts, 
                     and will reference to those parts by name.
                 </p>
+                
+
+                <p>
+                    Here's a list of the tricks covered by this website:
+                </p>
+                <ul>
+                    <li><a href="#early_supers">Early supers</a></li>
+                    <li><a href="#lava_spark">Lava spark</a></li>
+                    <li><a href="#blue_suit">Blue suit</a></li>
+                    <li><a href="#zebetite_skip">Zebetite skip</a></li>
+                    <li><a href="#mochtroid_clip">Mochtroid clip</a></li>
+                    <li><a href="#red_tower_climb">Red tower climb</a></li>
+                    <li><a href="#moat_skip">Moat skip</a></li>
+                    <li><a href="#continuous_wall_jump">Continuous wall jump (CWJ)</a></li>
+                    <li><a href="#silver_pirate_quick_kill">Silver pirate quick-kill</a></li>
+                </ul>
             
            </div>
 
@@ -94,14 +110,18 @@
                 <li>Speedbooster</li>
                 <li>Gravity Suit</li>
             </ul>
-            <p>
-                Blue suit is the state attained after defeating Draygon with a shinespark.
-                Generally the setup isn't hard, 
-                all that is needed is for Samus to collide with Draygon whilst shinesparking.
-                This will have Samus in a "Blue suit" that has all the propperties of speedbosting Samus, 
-                but'll allow for stopping. Pressing down at any point will award the player with a shinespark state.
-                Do note that if the run-button is pressed regular speedboster will be awarded and blue suit will be lost.
-            </p>
+            <div class="beam_grid">
+                <p>
+                    Blue suit is the state attained after defeating Draygon with a shinespark.
+                    Generally the setup isn't hard, 
+                    all that is needed is for Samus to collide with Draygon whilst shinesparking.
+                    This will have Samus in a "Blue suit" that has all the propperties of speedbosting Samus, 
+                    but'll allow for stopping. Pressing down at any point will award the player with a shinespark state.
+                    Do note that if the run-button is pressed regular speedboster will be awarded and blue suit will be lost.
+                </p>
+
+                <video src="img/bluesuit+draygonfight.mp4" loop muted autoplay>bluesuit being acquired</video>
+            </div>
         </div>
 
         <div id="zebetite_skip" class="container">
@@ -132,14 +152,19 @@
                 <li>Ice beam</li>
                 <li>Gravity suit</li>
             </ul>
-            <p>
-                The mochtroid clip is usually for categories which do not collect speedboster before going through meridia.
-                The trick is used to get through the room before Botwoon, by clipping through a ceiling.
-                To do just that, go up above where the speedboster blocks are, and go down into the mochtroids "cage".
-                From here lead it into the corner next to the speedboster blocks, crouch, aim up with both diagonal-aim buttons,
-                freeze the mocktroid, then jump and stand at the same time.
-                This should get you through the ceiling.
-            </p>
+            <div>
+                <p>
+                    The mochtroid clip is usually for categories which do not collect speedboster before going through meridia.
+                    The trick is used to get through the room before Botwoon, by clipping through a ceiling.
+                    To do just that, go up above where the speedboster blocks are, and go down into the mochtroids "cage".
+                    From here lead it into the corner next to the speedboster blocks, crouch, aim up with both diagonal-aim buttons,
+                    freeze the mocktroid, then jump and aim down at the same time.
+                    If you manage to get crouched, simply stand up.
+                    This should get you through the ceiling.
+                </p>
+
+                <video src="img/mochtroidClip.mp4" loop autoplay muted>mochtroid clip being performed</video>
+            </div>
         </div>
 
         <div id="red_tower_climb" class="container">
