--- a/movement.html
+++ b/movement.html
@@ -87,7 +87,7 @@
                 <h3>Advanced Tech</h3>
                 <p>
                     For more advanced players there is more advanced/unintended movement tech. 
-                    Among them are: damage boosting, bombjumping, short-charging, mid-air shinespark and gravity jumps.
+                    Among them are: damage boosting, bombjumping, short-charging, mid-air shinesparks, mockballs and gravity jumps.
                 </p>
 
                 <ul>
@@ -100,6 +100,7 @@
                         Spikes and similar sources, like electricity, have 10 frames to press jump and a direction.
                         Enemies have only 5 frames, and projectiles have only 4 frames.
                     </li>
+                    <br>
                     <li>
                         Bomb jumping is the act of repeatedly placing bombs below Samus to gain height from the explosion. 
                         A few different ways of bomb jumping exist, however the way covered here is the easiest.
@@ -107,6 +108,8 @@
                         To bombjump place a bomb, and just before it goes off, place the next bomb. 
                         Then you place a bomb as close to the previous bomb as possible, whilst still gaining height.
                     </li>
+                    <video src="img/bombjump-demo.mp4" autoplay muted loop>Video of a bomb-jump being performed</video>
+                    <br>
                     <li>
                         Short charging is a "glitch" that abuses the way speedboster is chraged. 
                         To charge the speedboster the game runs a check at one frame 
@@ -116,6 +119,28 @@
                         To short charge you tap the runbutton on these animation frames, 
                         which'll end up with you getting a speedboost with less distance travelled.
                     </li>
+                    <video src="img/short-charge-demo.mp4" autoplay muted loop>A shortcharge compared to a regular speedboost charge</video>
+                    <br>
+                    <li>
+                        A mockball is a trick that allows the morphed ball state to travel at sprinting speeds.
+                        To perform a mockball there are different methods, using a door, using a roof, or just timing it.
+                        
+                        To mockball through a door, sprint towards an open door, jump through it and during the door transmission,
+                        release the run button and aim downwards, keep holding the jump-button.
+                        As you approach the ground press downwards and forwards whilst still holding the jump button.
+                        Now you'll move faster in the morphed state.
+
+                        Mockballing of a ceiling is done by getting a runing jump, then once the ceiling is reached,
+                        you aim downwards, whilst holding jump, then press down and forward as you touch the ground.
+                        This is harder than executing a mockball through a door, but not by much.
+
+                        The timing for performing a mockball "raw" is as follows. Get a running start, jump, 
+                        release jump, press jump again, then aim down whilst still holding jump, 
+                        then down and forwards as you touch the ground. ¨
+                        This isn't much harder, however the window for the mockball can be tighter this way.
+                    </li>
+                    <video src="img/mockball-demo.mp4" autoplay muted loop>a mockball being performed</video>
+                    <br>
                     <li>
                         Mid-air shinesparks are, as their name suggests, shinesparks that are performed in the air.
                         This can be used for severall different purposes, your imagination is really the only limiting factor.
@@ -126,6 +151,8 @@
                         If jump is held through the entire jump, 
                         a shinespark upwards or diagonally upwards can be achieved by just aiming.
                     </li>
+                    <video src="img/mid-air-shinespark.mp4" autoplay muted loop>a mid-air shinespark being performed</video>
+                    <br>
                     <li>
                         Gravity jumps are perfomed when Samus performs a jump in liquid with the gravity suit, 
                         and in quick succession unequips the gravity suit.
@@ -137,6 +164,7 @@
                         Close the map/equip screen and you will now be flying.
                         Depending on timing of the jump you might get varying results.
                     </li>
+                    <video src="img/gravityJump.mp4" loop muted autoplay>a gravity jump being performed</video>
                 </ul>
             </div>
         </div>
