added copyright, contact pages

--- a/4.html
+++ b/4.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta lang="en"> 
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style/4.css">
         <link rel="stylesheet" href="style/style.css">
-
     </head>
     <body>
         <header>
@@ -20,6 +20,8 @@
             <span><a href="4.html" class="hoverable selected">Tricks</a></span>
             <span><a href="5.html" class="hoverable">Items</a></span>
             <span><a href="6.html" class="hoverable">Bosses</a></span>
+            <span><a href="copyright.html" class="hoverable">Copyright ©</a></span>
+            <span><a href="contact.html" class="hoverable">Contact us</a></span>
         </nav>
 
         <div class="page_text">
@@ -44,15 +46,15 @@
                     Here's a list of the tricks covered by this website:
                 </p>
                 <ul>
-                    <li><a href="#early_supers">Early supers</a></li>
-                    <li><a href="#lava_spark">Lava spark</a></li>
-                    <li><a href="#blue_suit">Blue suit</a></li>
-                    <li><a href="#zebetite_skip">Zebetite skip</a></li>
-                    <li><a href="#mochtroid_clip">Mochtroid clip</a></li>
-                    <li><a href="#red_tower_climb">Red tower climb</a></li>
-                    <li><a href="#moat_skip">Moat skip</a></li>
-                    <li><a href="#continuous_wall_jump">Continuous wall jump (CWJ)</a></li>
-                    <li><a href="#silver_pirate_quick_kill">Silver pirate quick-kill</a></li>
+                    <li><a class="text_hoverable" href="#early_supers">Early supers</a></li>
+                    <li><a class="text_hoverable" href="#lava_spark">Lava spark</a></li>
+                    <li><a class="text_hoverable" href="#blue_suit">Blue suit</a></li>
+                    <li><a class="text_hoverable" href="#zebetite_skip">Zebetite skip</a></li>
+                    <li><a class="text_hoverable" href="#mochtroid_clip">Mochtroid clip</a></li>
+                    <li><a class="text_hoverable" href="#red_tower_climb">Red tower climb</a></li>
+                    <li><a class="text_hoverable" href="#moat_skip">Moat skip</a></li>
+                    <li><a class="text_hoverable" href="#continuous_wall_jump">Continuous wall jump (CWJ)</a></li>
+                    <li><a class="text_hoverable" href="#silver_pirate_quick_kill">Silver pirate quick-kill</a></li>
                 </ul>
             
            </div>
