--- a/movement.html
+++ b/movement.html
@@ -22,6 +22,8 @@
             <span><a href="4.html" class="hoverable">Tricks</a></span>
             <span><a href="5.html" class="hoverable">Items</a></span>
             <span><a href="6.html" class="hoverable">Bosses</a></span>
+            <span><a href="copyright.html" class="hoverable">Copyright ©</a></span>
+            <span><a href="contact.html" class="hoverable">Contact us</a></span>
         </nav>
 
         <div class="page_text">
